--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1"
