--- a/package.json
+++ b/package.json
@@ -10,20 +10,32 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write 'src/**/*.ts'",
-    "prebuild": "npm run format && npm run lint"
+    "prebuild": "npm run format && npm run lint",
+    "test": "jest --config=Test/jest.config.ts"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chance": "^1.1.6",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.4",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "chance": "^1.1.11",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
